--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://abdallahmuhammad2.github.io/vertice-site/",
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
